# haikou-yummy

./: .gitignore  README.md  haikou_yummy_development_plan.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: restaurants.py
backend/app/core/: config.py  database.py
backend/app/models/: restaurant.py
backend/app/services/: amap.py
backend/scripts/: apply_manual_updates.py  check_db.py  cleaned_restaurants copy.json  cleaned_restaurants.json  generate_mock_json.py  import_restaurants.py  insert_mock_data.py  raw_data.txt  restore_data.py  scrape_dianping.py  sync_telephones.py  unified_enrichment.py  update_coords.py  update_details.py
backend/tests/: conftest.py
backend/tests/api/: test_enrichment.py  test_restaurants.py
backend/tests/scripts/: test_import_restaurants.py
docs/backend/: 01_mvp_api_design.md  02_crawler_implementation_plan.md
docs/frontend/: 01_frontend_planning.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
frontend/src/api/: restaurantService.ts
frontend/src/components/Admin/: AdminLayout.tsx  RestaurantEditor.tsx  RestaurantManager.tsx
frontend/src/pages/: MapPage.tsx
frontend/src/types/: restaurant.ts
miniprogram/: miniprogram_development_plan.md
miniprogram/src/: package-lock.json  package.json  tsconfig.json
miniprogram/src/src/: App.vue  manifest.json  pages.json  uni.scss
tests/docs/backend/: 01_api_test_plan.md  01_api_test_report.md  02_crawler_test_plan.md
(+15 files in other folders)
