[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]
